<resources>
    <string name="app_name">Wise Weather</string>
    <string name="app_slogan">Know Before You Go</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="Celsius">\u2103</string>
    <string name="Fahrenheit">\u2109</string>
    <string name="Kelvin">\u212A</string>
    <string name="no_favorite_places_yet">No favorite places yet</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="no_alerts_yet">No alerts yet</string>
    <string name="language">Languages</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Maps</string>
    <string name="unit">Unit</string>
    <string name="cel">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fah">Fahrenheit</string>
    <string name="enabled">Enable</string>
    <string name="disenable">Disable</string>
    <string name="notifications">Notifications</string>
    <string name="temperature">Temperature</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="save">Save</string>
    <string name="Search">Search</string>
    <string name="ok">OK</string>
    <string name="Alarm">Alarm</string>
    <string name="Notifications">Notifications</string>
    <string name="favorite">Favorite</string>
    <string name="home_item">Home</string>
    <string name="alert_item">Alert</string>
    <string name="settings_item">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="feels_like">Feels like</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="set_alerm">Set Alarm</string>
    <string name="there_is_no_weather_alerts">There is no weather alerts.</string>
    <string name="dismiss">Dismiss</string>
    <string name="weather_alarm">Weather Alarm</string>
    <string name="no_weather_alerts">No Weather Alerts</string>
    <string name="Meter">Meter/Sec</string>
    <string name="mile">Mile/Hour</string>
    <string name="please_allow_your_location_to_get_weather">Please allow your location to get weather !</string>
    <string name="allow">Allow</string>
</resources>