<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg"
    android:padding="5dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/alert" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_alarm"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp" />

        <TextView
            android:id="@+id/dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="4"
            android:maxLines="4"
            android:padding="10dp"
            android:text="@string/there_is_no_weather_alerts"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple"
            android:padding="10dp"
            android:text="@string/dismiss"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
