<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.view.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_language"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="20dp"
        android:elevation="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imageView_language_icon"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/lang"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView_language_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_radioGroup_language"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="@id/cardView_language"
        app:layout_constraintStart_toStartOf="@id/cardView_language"
        app:layout_constraintTop_toBottomOf="@id/cardView_language">

        <RadioGroup
            android:id="@+id/rg_lang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <RadioButton
                android:id="@+id/rb_arabic"
                android:buttonTint="@color/light_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic" />

            <RadioButton
                android:id="@+id/rb_eng"
                android:buttonTint="@color/light_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_temperature"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_radioGroup_language">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imageView_temperature_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/temp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="10dp"
                android:text="@string/temperature"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_temperature_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_radioGroup_temperature"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="@id/cardView_temperature"
        app:layout_constraintStart_toStartOf="@id/cardView_temperature"
        app:layout_constraintTop_toBottomOf="@id/cardView_temperature">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/rg_unit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:background="@color/white">

                <RadioButton
                    android:id="@+id/rb_celsius"
                    android:buttonTint="@color/light_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cel" />

                <RadioButton
                    android:id="@+id/rb_Kelvin"
                    android:buttonTint="@color/light_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin" />

                <RadioButton
                    android:id="@+id/rb_Fahrenheit"
                    android:buttonTint="@color/light_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fah" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_radioGroup_location"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="@id/cv_location"
        app:layout_constraintStart_toStartOf="@id/cv_location"
        app:layout_constraintTop_toBottomOf="@id/cv_location">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <RadioButton
                android:id="@+id/rb_gps"
                android:buttonTint="@color/light_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps" />

            <RadioButton
                android:id="@+id/rb_map"
                android:buttonTint="@color/light_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_location"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imageView_location_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/location"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView_location_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview11"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="@id/cv_notification"
        app:layout_constraintStart_toStartOf="@id/cv_notification"
        app:layout_constraintTop_toBottomOf="@id/cv_notification">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RadioButton
                android:id="@+id/rb_Enable"
                android:buttonTint="@color/light_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enabled" />

            <RadioButton
                android:id="@+id/rb_Desable"
                android:buttonTint="@color/light_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disenable" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_notification"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_radioGroup_location">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imgv_notification"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/notifications"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/notifications"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgv_notification"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginBottom="176dp"
        android:text="@string/save"
        android:elevation="5dp"
        android:textStyle="bold"
        android:background="@color/light_blue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>


